[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "generate a maze given a config file, solving it and displaying the a visual in the terminal"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]